2001-04-11  Rob Savoye  <rob@slipknot.welcomehome.org>

	* Clean.tcl: Add -r to rm, so it gets rid of CVS directories.
	* .clean: Don't install the debian or redhat packaging directories.
	* Makefle.am: Install dejagnu.h. Fix dist2 target, so we build our
	own tarballs, instead of letting automake do it for us.
	* examples/cala/Makefile.am: Use noist_PROGRAMS, so calc doesn't
	get installed.
	* doc/Makefile.am: Install the man page for runtest.
	* configure.in: Make VERSION 1.4.0, not just 1.4, so distributions
	get built right.

2001-04-07  Rob Savoye  <rob@blackpeter.welcomehome.org>

	* lib/dejagnu.exp: Test driver for embedded DejaGnu API.
	* dejagnu.h: Embedded DejaGnu API main header file.
	* config/default.exp: Default tool init file for simple test
	suites.

2001-04-06  Rob Savoye  <rob@slipknot.welcomehome.org>

	* Makefile.am: Add an empty check-DEJAGNU target, cause we only
	want to run the testsuite once.
	* example/Makefile.am: Don't run "calc" as part of check target,
	cause calc is just an example.
	* testsuite/Makefile.am: Use the runtest in the source tree, or
	refuse to run.

2001-04-03  David Billinghurst <David.Billinghurst@riotinto.com>

	* baseboards/unix.exp: Don't link with -lm on cygwin.
	* lib/target.exp: Remove compiler warnings about -fpic or -fPIC on
	cygwin.

2001-02-21  Rob Savoye  <rob@slipknot.welcomehome.org>

	* debian/changelog: Add entry for new release.
	* debian/control: Fix problem with "no binary package" error.
	* debian/rules: Fix so things actually build a package. This was
	mostly installing the new html version of the doc, not an info
	page.
	* doc/Makefile.am: Build and install the rtf and ps versions
	of the manual. Remove all the created files and subdirectories.
	* doc/overview.sgml: Update the copyright message.
	* doc/ref.sgml: Update the copyright messages. Add section on
	obtaining DejaGnu releases.
	* doc/user.sgml: Update the copyright messages. Add blurb about
	the --mail option.
	* doc/overview: Regenerated.